deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: hello-gitops
  name: hello-gitops
spec:
  replicas: 3
  selector:
    matchLabels:
      app: hello-gitops
  template:
    metadata:
      labels:
        app: hello-gitops
    spec:
      containers:
        - image: potopaa/hello-gitops:latest
          name: hello-gitops
          ports:
            - name: http
              containerPort: 8050
