service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-gitops
  namespace: hello-gitops
  labels:
    app: hello-gitops
spec:
  type: LoadBalancer
  selector:
    app: hello-gitops
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 8050
